ambos jugadores colisionan

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="game-intro">
         <img src="http://img05.deviantart.net/9d08/i/2011/354/3/1/ffr_41_mr_mave_yukikaze_by_stvictoria-d4jqixg.jpg" alt="">
         <br>
-    <button id="start-button">StartGame</button>
+        <div class="buttons">
+            <button id="start-button">StartGame</button>
+            <button id="restart-button">NewGame</button>
+        </div>
     </div>
     <div class="game-board">
         <canvas width="750" height="500"></canvas>
