se agrega estilo en front, revisar boton restart

--- a/index.html
+++ b/index.html
@@ -5,19 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-    <title>OneShoot</title>
+    <title>ONESHOT</title>
 </head>
 <body>
     <div class="game-intro">
-        <img src="http://img05.deviantart.net/9d08/i/2011/354/3/1/ffr_41_mr_mave_yukikaze_by_stvictoria-d4jqixg.jpg" alt="">
-        <br>
-        <div class="buttons">
-            <button id="start-button">StartGame</button>
-            <button id="restart-button">NewGame</button>
-        </div>
+        <img src="./images/logo_neon.png" alt="">
+        
     </div>
     <div class="game-board">
+        <div class="morado">
+            <img src="./images/morado.png" alt="">
+        </div>
         <canvas width="750" height="500"></canvas>
+        <div class="morado">
+            <img src="./images/verde.png" alt="">
+        </div>
+    </div>
+    <div class="buttons">
+        <button id="start-button">StartGame</button>
+        <button id="restart-button">New Game</button>
     </div>
     <script src="js/main.js"></script>
 </body>
